Bug 245127 - Multi layer files don't display at first when opening
Summary: Multi layer files don't display at first when opening
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (show other bugs)
Version: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-19 13:16 UTC by animtim
Modified: 2010-08-22 20:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2010-07-19 13:16:55 UTC
Version:           svn trunk (using KDE 4.4.2) 
OS:                Linux

When I open a file with more than 1 layer, nothing is displayed until I hide/show a layer.

Reproducible: Always

Steps to Reproduce:
Create a new document,
fill the first layer with a color,
create another layer above and draw something with another color,
save it,
close it,
open it

Actual Results:  
The document is invisible.
You can toggle the visibility of first layer, it displays the drawn area.
Or you can toggle the filled layer, it displays the whole area.

Expected Results:  
The document should be visible already.
Comment 1 animtim 2010-08-10 20:39:57 UTC
I've just noticed this bug happens only with OpenGL setting enabled.
Comment 2 Halla Rempt 2010-08-15 16:43:48 UTC
BUGDAY
Comment 3 Michael Leupold 2010-08-22 17:01:18 UTC
I can confirm this bug. In addition to that, if you have a shape layer it seems the contents of that layer will draw (with some surroundings of the other layers) while the remainder of the file is invisible.
Comment 4 Kubuntiac 2010-08-22 18:19:49 UTC
Confirmed, both that it happens using OpenGL and that it doesn't without OpenGL. Previews in the layers docker show fine.

TECH SPECS:
Krita revision 1166713
Kubuntu 10.04 32bit
KDE 4.5
QT 4.7.0 beta 2
FOSS ATI driver (ATI Radeon x1250)
Comment 5 Dmitry Kazakov 2010-08-22 20:48:40 UTC
SVN commit 1166745 by dkazakov:

Cold initialization of KisOpenGLImageTextures

BUG:245127


 M  +3 -0      kis_canvas2.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1166745