Cold initialization of KisOpenGLImageTextures

BUG:245127

svn path=/trunk/koffice/; revision=1166745